[package]
name = "tetris-tui"
version = "0.1.1"
edition = "2021"
authors = ["Quan Tong <quantonganh@email.com>"]
license = "MIT OR Apache-2.0"
description = "Tetris in the terminal"
readme = "README.md"
homepage = "https://github.com/quantonganh/tetris-tui"
repository = "https://github.com/quantonganh/tetris-tui"
keywords = ["tetris", "cli", "terminal"]
categories = ["command-line-game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
rand = "0.8.5"
rusqlite = "0.29"
dirs = "5.0"
